--- a/src/app/shared/videoSite/header/header.component.html
+++ b/src/app/shared/videoSite/header/header.component.html
@@ -1,6 +1,7 @@
 <header>
-    <div class="logoBox">
+    <div  class="logoBox">
         <img [routerLink]="['/video_site']" src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
+        <img src="../../../assets/img/burger-menu.png" alt="menu" class="burgerMenuIcon" (click)="toggleMobileMenu()">
         <div class="headerBtns">
             <button [routerLink]="['/video_site']" class="headerBtn">Home</button>
             <button class="headerBtn" (click)="toggleCategoryMenu($event)">Category</button>
@@ -23,12 +24,28 @@
                 <h1 (click)="openSmallMenu($event)">{{userService.currentUserFirstName}}</h1>
             </div>
         </div>
+
+
+
         <!-- <button class="blueBtn" (click)="openSmallMenu($event)">Profile</button> -->
         <div class="profilSelection" [ngClass]="{'slideInAnimation': shwonProfilSelection, 'slideOutAnimation': !shwonProfilSelection}" (click)="$event.stopPropagation()">
             <button  class="profilSelectionBtn" [routerLink]="['/profile_details']">Manage profile</button>
             <button  (click)="logout()" class="profilSelectionBtn" ><img src="../../../assets/icons/logout.svg" alt="log out img"/>Log out</button>
         </div>
     </div>
+
+
+
+
+    
+      <!-- Dropdown-Menü (mobile Ansicht) -->
+  <div (click)="$event.stopPropagation()" [ngClass]="{'mobileSection':showMobileSelection, 'mobileSectionOff':!showMobileSelection}">
+    <button (click)="toggleMobileMenu()" [routerLink]="['/video_categorys', 'action']" class="profilSelectionBtn">Action</button>
+                <button (click)="toggleMobileMenu()" [routerLink]="['/video_categorys', 'anime']" >Anime</button>
+                <button (click)="toggleMobileMenu()" [routerLink]="['/video_categorys', 'drama']">Drama</button>
+                <button (click)="toggleMobileMenu()" [routerLink]="['/video_categorys', 'romance']" >Romance</button>
+                <button (click)="toggleMobileMenu()" [routerLink]="['/video_categorys', 'adventure']">Adventure</button>
+  </div>
 </header>
 
 
