--- a/src/app/landingpage/video-site/video-preview/video-preview.component.scss
+++ b/src/app/landingpage/video-site/video-preview/video-preview.component.scss
@@ -1,6 +1,11 @@
 section {
-    width: 360px;
-    height: 240px;
+    // width: 360px;
+    // height: 240px;
+    width: 100%;
+    height: 100%;
+    max-width: 360px;
+    aspect-ratio: 16/9; 
+    min-height: 120px;
     position: relative;
     cursor: pointer;
 
