--- a/src/app/landingpage/video-site/video-site.component.scss
+++ b/src/app/landingpage/video-site/video-site.component.scss
@@ -1,6 +1,6 @@
 @import './../../../styles.scss';
 
-section{
+section {
     width: 100%;
     height: auto;
     background-color: #060606;
@@ -17,11 +17,13 @@ section{
     object-fit: cover;
     overflow: hidden;
     background-color: #0F1F26;
+
     .backgroundVideo {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
+
     .shadow {
         position: absolute;
         width: 100%;
@@ -33,7 +35,7 @@ section{
     }
 }
 
-.descriptionDivBreakout{
+.descriptionDivBreakout {
     color: whitesmoke;
     position: absolute;
     top: 28%;
@@ -42,11 +44,13 @@ section{
     @include dFlex($a: flex-start, $g: 32px);
     flex-direction: column;
     text-align: start;
-    h1{
+
+    h1 {
         font-size: 5rem;
         margin: 0;
     }
-    span{
+
+    span {
         font-size: large;
     }
 }
@@ -72,12 +76,22 @@ section{
 
                 .video4LoopBox {
                     display: flex;
-                    gap: 4rem;
+                    gap: 1em;
                     width: 100%;
                     overflow-x: auto;
                     overflow-y: hidden;
                     scroll-behavior: smooth;
-                     
+                    align-items: center;
+                    
+                    // einkommentieren wenn man fest größe habe will 
+                    // & > app-video-preview {
+                    //     flex: 0 0 auto;  // Stelle sicher, dass die Größe der Elemente nicht vom gap beeinflusst wird
+                    //     min-width: 160px; 
+                    //     // min-height: 90px; 
+                    //     max-width: 240px;
+                    //     aspect-ratio: 16/9;
+                    // }
+
                     &::-webkit-scrollbar {
                         height: 4px;
                     }
@@ -107,9 +121,11 @@ section{
                         border: none;
                         cursor: pointer;
                         transition: .2s all ease-in-out;
-                        &:hover{
+
+                        &:hover {
                             scale: 1.2;
                         }
+
                         img {
                             width: 20px;
                             height: 20px;
@@ -126,16 +142,18 @@ section{
                     height: 100%;
                     @include dFlex();
                     z-index: 2;
-                    background: linear-gradient(to right, rgba(30, 30, 30, 0) 0%, #000000 100% );
+                    background: linear-gradient(to right, rgba(30, 30, 30, 0) 0%, #000000 100%);
 
                     button {
                         background: none;
                         border: none;
                         cursor: pointer;
                         transition: .2s all ease-in-out;
-                        &:hover{
+
+                        &:hover {
                             scale: 1.2;
                         }
+
                         img {
                             width: 20px;
                             height: 20px;
@@ -191,7 +209,7 @@ section{
     100% {
         transform: translateY(100%);
         border-radius: 12px;
-        height: 0; 
+        height: 0;
         opacity: 0;
     }
 }
