--- a/src/app/shared/videoSite/header/header.component.scss
+++ b/src/app/shared/videoSite/header/header.component.scss
@@ -278,12 +278,16 @@ header {
 }
 
 @media (max-width: 900px) {
+  .btnBoxRight {
+    display: none;
+  }
   .burgerMenuIcon {
     display: flex;
     z-index: 55;
     position: absolute;
-    top: 0%;
-    left: calc(50% - 38px);
+    top: 1%; // bunding mit left logo
+    // left: calc(50% - 38px); mitte version
+    right: 6rem; // right version
     width: 78px;
     height: 78px;
     cursor: pointer;
@@ -292,8 +296,9 @@ header {
   }
   .mobileSection {
     position: absolute;
-    top: 81%;
-    left: calc(50% - 144px);
+    top: 82%;
+    // left: calc(50% - 144px); mittige version
+    right: 0;
     width: 265px;
     height: auto;
     padding: 12px;
@@ -301,7 +306,7 @@ header {
     flex-direction: column;
     background-color: #1e1e1e;
     border-radius: 12px;
-    z-index: 2;
+    z-index: 3;
     button {
       color: whitesmoke;
       border: none;
