--- a/src/app/landingpage/video-site/video-display/video-display.component.scss
+++ b/src/app/landingpage/video-site/video-display/video-display.component.scss
@@ -18,6 +18,7 @@
   // background: #010101; //videoplayerfarbe
   border-radius: 8px;
   max-width: 30vw;
+  min-width: 500px;// noch mit full hd abgleichen
   /* max-height: 100%; */
   text-align: center;
   display: flex;
@@ -259,4 +260,13 @@ select {
 
 :fullscreen .showQualitySelector {
   animation: showQualityBtn 0.08s linear forwards !important;
+}
+
+@media (max-width: 560px) {
+  .video-display-content {
+    max-width: 30vw;
+    min-width: 300px;// noch mit full hd abgleichen
+
+  }
+
 }
