--- a/src/app/landingpage/imprint/imprint/imprint.component.html
+++ b/src/app/landingpage/imprint/imprint/imprint.component.html
@@ -1,1 +1,60 @@
-<p>imprint works!</p>
+<section>
+    <div class="placholder"></div>
+  <div class="container">
+    <div class="homeContainer"> <img class="homeButton" [routerLink]="['/video_site']" src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
+        <span [routerLink]="['/video_site']" >Back to VideoFlix</span></div>
+   
+    <div class="header">
+      <h1>Imprint</h1>
+    </div>
+     Information according to §5 TMG
+    <br /><br />
+    <div class="team">
+      <div>
+        <p>Aleksander Demyanovych</p>
+        <p>Heidweilerstr. 23</p>
+        <p>54313 Zemmer</p>
+      </div>
+      <div>
+        <p>Björn ten Eicken</p>
+        <p>Baisieperstraße 31</p>
+        <p>42859 Remscheid</p>
+      </div>
+    </div>
+    <h3>Contact</h3>
+    <!-- <p>
+        Telephone:
+      <a href="tel:01724180328">0172-4180328</a>
+    </p> -->
+    <p>
+        Mail:
+      <a href="mailto:v.flix2000@gmail.com">mail&#64;VideoFlix.com</a>
+    </p>
+    <br />
+    <h2>Disclaimer:</h2>
+
+    <h3>Liability for content</h3>
+
+    <p>The contents of our pages were created with the greatest care. However, we cannot assume any liability for the accuracy, completeness and topicality of the content. As a service provider, we are responsible for our own content on these pages in accordance with § 7 para. 1 TMG (German Telemedia Act) and general laws. According to §§ 8 to 10 TMG, however, we as a service provider are not obliged to monitor transmitted or stored third-party information or to investigate circumstances that indicate illegal activity. Obligations to remove or block the use of information in accordance with general legislation remain unaffected by this. However, liability in this respect is only possible from the time of knowledge of a specific infringement. As soon as we become aware of such infringements, we will remove this content immediately.</p>
+
+    <h3>Liability for links</h3>
+
+    <p>Our website contains links to external third-party websites over whose content we have no influence. Therefore, we cannot accept any liability for this third-party content. The respective provider or operator of the pages is always responsible for the content of the linked pages. The linked pages were checked for possible legal violations at the time of linking. Illegal content was not recognizable at the time of linking. However, permanent monitoring of the content of the linked pages is not reasonable without concrete evidence of an infringement. If we become aware of any legal infringements, we will remove such links immediately.</p>
+
+    <h3>Copyright</h3>
+
+    <p>The content and works created by the site operators on these pages are subject to German copyright law. Duplication, processing, distribution and any form of commercialization of such material beyond the scope of the copyright law shall require the prior written consent of its respective author or creator. Downloads and copies of this site are only permitted for private, non-commercial use. Insofar as the content on this site was not created by the operator, the copyrights of third parties are respected. In particular, third-party content is identified as such. Should you nevertheless become aware of a copyright infringement, please inform us accordingly. If we become aware of any infringements, we will remove such content immediately.</p>
+
+    <h3>Data protection</h3>
+
+    <p>The use of our website is generally possible without providing personal data. Insofar as personal data (e.g. name, address or e-mail addresses) is collected on our pages, this is always done on a voluntary basis as far as possible. This data will not be passed on to third parties without your express consent. We would like to point out that data transmission over the Internet (e.g. when communicating by e-mail) may be subject to security vulnerabilities. Complete protection of data against access by third parties is not possible, and we hereby expressly prohibit the use of contact data published in the context of the legal notice obligation by third parties for sending unsolicited advertising and information material. The operators of this website expressly reserve the right to take legal action in the event of the unsolicited sending of advertising information, such as spam e-mails.</p>
+    <br />
+    <p>
+        Imprint of the
+      <a href="https://www.impressum-generator.de/" target="_blank">imprint generator</a>
+      of the
+      <a href="https://www.kanzlei-hasselbach.de/" target="_blank">law firm Hasselbach, lawyers for labor law and family law</a>
+    </p>
+  </div>
+  <div class="placholder"></div>
+</section>
