--- a/src/app/landingpage/imprint/privacy-policy/privacy-policy.component.html
+++ b/src/app/landingpage/imprint/privacy-policy/privacy-policy.component.html
@@ -1,1 +1,154 @@
-<p>privacy-policy works!</p>
+<section>
+    <div class="placholder"></div>
+    <div class="container">
+        
+        <div class="homeContainer"> <img class="homeButton" [routerLink]="['/video_site']" src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
+            <span [routerLink]="['/video_site']" >Back to VideoFlix</span></div>
+      <div class="header">
+        <h1>Privacy policy</h1>
+      </div>
+      <h2 id="'content0">
+        Preamble
+      </h2>
+      <p>
+        With the following privacy policy, we would like to inform you about which types of your personal data (hereinafter also referred to as 'data') we process, for what purposes and to what extent. The privacy policy applies to all processing of personal data carried out by us, both in the context of the provision of our services and in particular on our websites, in mobile applications and within external online presences, such as our social media profiles (hereinafter collectively referred to as 'online offer').
+      </p>
+  
+      <h2>Table of contents</h2>
+      <ul class="index">
+        <li>
+          <a href="privacy-policy/#content0">Preamble</a>
+        </li>
+        <li>
+          <a href="privacy-policy#content1">Person responsible</a>
+        </li>
+        <li>
+          <a href="privacy-policy#content2">Overview of processing</a>
+        </li>
+        <li>
+          <a href="privacy-policy#content3">Relevant legal bases</a>
+        </li>
+        <li>
+          <a href="privacy-policy#content4">Security measures</a>
+        </li>
+        <li>
+          <a href="privacy-policy#content5">Deletion of data</a>
+        </li>
+        <li>
+          <a href="privacy-policy#content6">Rights of the data subjects</a>
+        </li>
+        <li>
+          <a href="privacy-policy#content7">Amendment and updating of the privacy policy</a>
+        </li>
+        <li>
+          <a href="privacy-policy#content8">Definitions of terms</a>
+        </li>
+      </ul>
+      
+      <h2 id="content1">Person responsible</h2>
+      <div class="team">
+        <div>
+          <p>Aleksander Demyanovych</p>
+          <p>Heidweilerstr. 23</p>
+          <p>54313 Zemmer</p>
+        </div>
+        <div>
+          <p>Björn ten Eicken</p>
+          <p>Baisieperstraße 31</p>
+          <p>42859 Remscheid</p>
+        </div>
+      </div>
+      <br />
+      <p>Telephone: <a href="tel:01724180328">0172-4180328</a></p>
+      <p>Mail: <a href="mailto:mail@andre-kempf.com">mail&#64;andre-kempf.com</a></p>
+      
+      <h2 id="content2">Overview of processing</h2>
+      <p>The following overview summarizes the types of data processed and the purposes of their processing and refers to the data subjects.</p>
+      <h3>Types of data processed</h3>
+      <ul>
+        <li>Contact data, content data, usage data, metadata, communication data, process data.</li>
+      </ul>
+      <h3>Categories of affected persons</h3>
+      <ul>
+        <li>Communication partner</li>
+      </ul>
+      <h3>Purposes of the processing</h3>
+      <ul>
+        <li>Contact requests and communication, managing and responding to requests, feedback, providing our online services and user-friendliness.</li>
+      </ul>
+      
+      <h2 id="content3">Relevant legal bases</h2>
+      <p><strong>Relevant legal bases according to the GDPR:</strong><br />
+      Below you will find an overview of the legal bases of the GDPR on the basis of which we process personal data. Please note that in addition to the provisions of the GDPR, national data protection regulations may apply in your or our country of residence or domicile. Should more specific legal bases also apply in individual cases, we will inform you of these in the privacy policy.</p>
+      <ul>
+        <li><strong>Legitimate interests (Art. 6 para. 1 sentence 1 lit. f) GDPR:</strong><br />
+        Processing is necessary for the purposes of the legitimate interests pursued by the controller or by a third party, except where such interests are overridden by the interests or fundamental rights and freedoms of the data subject which require protection of personal data.</li>
+      </ul>
+      <p><strong>National data protection regulations in Germany:</strong><br />
+      In addition to the data protection regulations of the GDPR, national data protection regulations apply in Germany. These include, in particular, the Act on the Protection against Misuse of Personal Data in Data Processing (Federal Data Protection Act - BDSG). In particular, the BDSG contains special regulations on the right to information, the right to erasure, the right to object, the processing of special categories of personal data, processing for other purposes and transmission as well as automated decision-making in individual cases, including profiling. The data protection laws of the individual federal states may also apply.</p>
+      
+      <h2 id="content4">Security measures</h2>
+      <p>We take appropriate technical and organizational measures in accordance with the legal requirements, taking into account the state of the art, the implementation costs and the nature, scope, circumstances and purposes of the processing as well as the different probabilities of occurrence and the extent of the threat to the rights and freedoms of natural persons, in order to ensure a level of protection appropriate to the risk.</p>
+      <p>The measures include, in particular, safeguarding the confidentiality, integrity and availability of data by controlling physical and electronic access to the data as well as the access, input, disclosure, safeguarding of availability and its separation. Furthermore, we have established procedures that ensure the exercise of data subject rights, the deletion of data and responses to data threats. Furthermore, we already take the protection of personal data into account during the development or selection of hardware, software and processes in accordance with the principle of data protection, through technology design and through data protection-friendly default settings.</p>
+      <p>TLS/SSL encryption (https): To protect user data transmitted via our online services, we use TLS/SSL encryption. Secure Sockets Layer (SSL) is the standard technology for securing Internet connections by encrypting the data transmitted between a website or app and a browser (or between two servers). Transport Layer Security (TLS) is an updated and more secure version of SSL. Hyper Text Transfer Protocol Secure (HTTPS) is displayed in the URL when a website is secured by an SSL/TLS certificate.</p>
+      
+      <h2 id="content5">Deletion of data</h2>
+      <p>The data processed by us will be deleted in accordance with the legal requirements as soon as the consent given for processing is revoked or other permissions no longer apply (e.g. if the purpose for processing this data no longer applies or it is not required for the purpose). If the data is not deleted because it is required for other and legally permissible purposes, its processing is restricted to these purposes. This means that the data is blocked and not processed for other purposes. This applies, for example, to data that must be retained for commercial or tax law reasons or whose storage is necessary for the assertion, exercise or defense of legal claims or to protect the rights of another natural or legal person. Our data protection notices may also contain further information on the retention and deletion of data, which take priority for the respective processing operations.</p>
+      
+      <h2 id="content6">Rights of the data subjects</h2>
+      <p>Rights of data subjects under the GDPR: As a data subject, you are entitled to various rights under the GDPR, which arise in particular from Art. 15 to 21 GDPR:</p>
+      <strong>Right to object</strong>
+      <ul>
+        <li><strong>Right to withdraw consent:</strong><br />
+        You have the right to withdraw your consent at any time.</li>
+        <li><strong>Right to information:</strong><br />
+        You have the right to request confirmation as to whether the data in question is being processed and to request information about this data as well as further information and a copy of the data in accordance with the legal requirements.</li>
+        <li><strong>Right to rectification:</strong><br />
+        In accordance with the legal requirements, you have the right to request the completion of data concerning you or the correction of incorrect data concerning you.</li>
+        <li><strong>Right to erasure and restriction of processing:</strong><br />
+        In accordance with the legal requirements, you have the right to demand that data concerning you be deleted immediately or, alternatively, to demand that the processing of the data be restricted in accordance with the legal requirements.</li>
+        <li><strong>Right to data portability:</strong><br />
+        You have the right to receive the data concerning you, which you have provided to us, in a structured, commonly used and machine-readable format in accordance with the legal requirements or to request its transmission to another controller.</li>
+        <li><strong>Complaint to the supervisory authority:</strong><br />
+        Without prejudice to any other administrative or judicial remedy, you have the right to lodge a complaint with a supervisory authority, in particular in the Member State of your habitual residence, place of work or place of the alleged infringement if you consider that the processing of personal data relating to you infringes the provisions of the GDPR.</li>
+      </ul>
+      
+      <h2 id="content7">Amendment and updating of the privacy policy</h2>
+      <p>We ask you to inform yourself regularly about the content of our privacy policy. We will adapt the privacy policy as soon as changes to the data processing carried out by us make this necessary. We will inform you as soon as the changes require an act of cooperation on your part (e.g. consent) or other individual notification.</p>
+      <p>If we provide addresses and contact information of companies and organizations in this privacy policy, please note that the addresses may change over time and please check the information before contacting us.</p>
+      
+      <h2 id="content8">Definitions of terms</h2>
+      <p>
+        This section provides you with an overview of the terms used in this privacy policy. Insofar as the terms are defined by law, their legal definitions apply. The following explanations, on the other hand, are primarily intended to aid understanding.
+      </p>
+      <ul>
+        <li>
+          <strong>Personal data:</strong
+          ><br />
+          'Personal data' means any information relating to an identified or identifiable natural person (hereinafter referred to as 'data subject'); an identifiable natural person is one who can be identified, directly or indirectly, in particular by reference to an identifier such as a name, an identification number, location data, an online identifier (e.g. a cookie) or to one or more factors specific to the physical, physiological, genetic, mental, economic, cultural or social identity of that natural person.
+        </li>
+        <li>
+          <strong>Responsible person:</strong
+          ><br />
+          The 'controller' is the natural or legal person, public authority, agency or other body which, alone or jointly with others, determines the purposes and means of the processing of personal data.
+        </li>
+        <li>
+          <strong>Processing</strong
+          ><br />
+          'Processing' means any operation or set of operations which is performed on personal data, whether or not by automated means. The term is broad and covers practically every handling of data, be it collection, analysis, storage, transmission or deletion.
+        </li>
+      </ul>
+      <br />
+      <p>
+        <a
+          href="https://datenschutz-generator.de/"
+          title="Rechtstext von Dr. Schwenke - für weitere Informationen bitte anklicken."
+          target="_blank"
+          rel="noopener noreferrer nofollow"
+          >Created with free Datenschutz-Generator.de by Dr. Thomas Schwenke</a
+        >
+      </p>
+    </div>
+    <div class="placholder"></div>
+  </section>
+  
